fixed canvas issues

--- a/canvas.html
+++ b/canvas.html
@@ -12,12 +12,12 @@
 <body>
     <div class="container" id="container">
         <div class="left">
-            <canvas id="cvsCirc"></canvas> <br>
+            <canvas id="cvsCirc" width = "400px" height="400px"></canvas> <br>
             <button id="btnCirc" type="button">Draw Some Circles</button> <br>
             <input type="text" id="txtCirc" value="5" />
         </div>
         <div class="right">
-            <canvas id="cvsRect"></canvas> <br>
+            <canvas id="cvsRect" width = "400px" height="400px"></canvas> <br>
             <button id="btnRect" type="button">Draw Some Rectangles</button> <br>
             <input type="text" id="txtRect" value="5" />
         </div>
