--- a/canvas.html
+++ b/canvas.html
@@ -1,25 +1,45 @@
 <!DOCTYPE html>
+<!-- Karl Dickensheets
+     Canvas Assignment
+     HTML File -->
+
 <html lang="en">
 
 <head>
+    <!-- page setup -->
     <meta charset="UTF-8">
     <meta name="viewport" context="width=device-width, initial-scale=1.0">
     <title>Canvas</title>
+    <!-- CSS -->
     <link rel="stylesheet" href="canvas.css">
+    <!-- Javascript -->
     <script src="canvas.js"></script>
+    <script src="test.js"></script>
 </head>
 
 <body>
+    <!-- main container -->
     <div class="container" id="container">
+        <!-- circle container -->
         <div class="left">
-            <canvas id="cvsCirc" width = "400px" height="400px"></canvas> <br>
+            <canvas id="cvsCirc" width="400px" height="400px"></canvas> <br>
             <button id="btnCirc" type="button">Draw Some Circles</button> <br>
             <input type="text" id="txtCirc" value="5" />
         </div>
+        <!-- rectangle container -->
         <div class="right">
-            <canvas id="cvsRect" width = "400px" height="400px"></canvas> <br>
+            <canvas id="cvsRect" width="400px" height="400px"></canvas> <br>
             <button id="btnRect" type="button">Draw Some Rectangles</button> <br>
             <input type="text" id="txtRect" value="5" />
+        </div>
+    </div>
+
+    <div class="container">
+        
+        <div class="bottom , right">
+            <canvas id="cvsDraw" width="400px" height="400px"></canvas> <br>
+            Click to draw on the canvas! <br>
+            <button id="btnDrawClear" type="button">Clear the Canvas</button> <br>
         </div>
     </div>
 </body>
